--- a/src/sections/Footer/Footer.module.css
+++ b/src/sections/Footer/Footer.module.css
@@ -112,6 +112,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .contact-row {
+    padding-block: 4.5rem;
+  }
+
   .contact-row :global(.container) {
     display: flex;
     flex-wrap: wrap;
